--- a/devel/py-poetry-plugin-export/Makefile
+++ b/devel/py-poetry-plugin-export/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.11 2024/10/14 06:45:40 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2025/01/13 08:37:36 adam Exp $
 
-DISTNAME=	poetry_plugin_export-1.8.0
+DISTNAME=	poetry_plugin_export-1.9.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/g}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/poetry-plugin-export/}
