pbulk, pbulk-base: bump version to 0.74/0.58
When a dependency can not be resolved, mark packages using it as
broken using PKG_FAIL_REASON, but don't fail the scan/resolve phase.

This obsoletes the ignore_missing_dependencies configuration variable,
add a warning about that.

Improve the man pages while here.

--- a/pkgtools/pbulk-base/Makefile
+++ b/pkgtools/pbulk-base/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.28 2023/02/12 21:17:24 joerg Exp $
+# $NetBSD: Makefile,v 1.29 2025/01/13 11:03:03 wiz Exp $
 
-DISTNAME=	pbulk-base-0.57
+DISTNAME=	pbulk-base-0.58
 COMMENT=	Core components of the modular bulk build framework
 
 .include "../../pkgtools/pbulk/Makefile.common"
