--- a/pkgtools/pbulk/files/pbulk/pbulk.conf
+++ b/pkgtools/pbulk/files/pbulk/pbulk.conf
@@ -1,4 +1,4 @@
-# $NetBSD: pbulk.conf,v 1.27 2024/10/12 10:43:52 jperkin Exp $
+# $NetBSD: pbulk.conf,v 1.28 2025/01/13 11:03:03 wiz Exp $
 
 # Version of the configuration file. This is bumped whenever the default
 # config changes to notify the administrator about updates.
@@ -43,11 +43,6 @@ bootstrapkit=/usr/pkgsrc/bootstrap/bootstrap.tar.gz
 # Optionally build a subset of the available packages and their dependencies.
 # The file is a newline separated list of package locations (e.g. lang/perl5).
 #limited_list=/limited_list
-
-# Optionally ignore unresolvable dependencies for a full build (e.g.
-# a build without limited_list set).  Default behavior is to bail out.
-#
-ignore_missing_dependencies=no
 
 # If yes, consider a package up-to-date, if the dependency list matches
 # the existing binary package and the recorded RCS IDs match the pkgsrc
