--- a/pkgtools/mktool/Makefile
+++ b/pkgtools/mktool/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.21 2024/10/21 14:20:11 jperkin Exp $
+# $NetBSD: Makefile,v 1.22 2025/01/13 11:24:47 jperkin Exp $
 
 DISTNAME=	mktool-1.4.1
 CATEGORIES=	pkgtools
 MASTER_SITES=	${MASTER_SITE_GITHUB:=jperkin/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
 
-MAINTAINER=	jperkin@pkgsrc.org
+MAINTAINER=	pkgsrc-users@pkgsrc.org
 HOMEPAGE=	https://github.com/jperkin/mktool/
 COMMENT=	High performance alternatives for pkgsrc/mk
 LICENSE=	isc
