--- a/devel/py-dirty-equals/Makefile
+++ b/devel/py-dirty-equals/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.3 2024/10/14 06:08:39 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/13 14:28:45 adam Exp $
 
-DISTNAME=	dirty_equals-0.8.0
+DISTNAME=	dirty_equals-0.9.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=d/dirty-equals/}
