xtrace: update to 1.4.0
- support for new requests and messages
- bug fixes

--- a/x11/xtrace/patches/patch-Makefile.in
+++ b/x11/xtrace/patches/patch-Makefile.in
@@ -1,10 +1,10 @@
-$NetBSD: patch-Makefile.in,v 1.1 2015/09/27 11:21:41 tnn Exp $
+$NetBSD: patch-Makefile.in,v 1.2 2025/01/13 16:41:55 ktnb Exp $
 
 Hook in tdestroy replacement.
 
---- Makefile.in.orig	2012-06-11 12:57:07.000000000 +0000
+--- Makefile.in.orig	2019-02-25 09:57:46.000000000 +0000
 +++ Makefile.in
-@@ -74,7 +74,7 @@ PROGRAMS = $(bin_PROGRAMS)
+@@ -109,7 +109,7 @@ PROGRAMS = $(bin_PROGRAMS)
  am_xtrace_OBJECTS = main.$(OBJEXT) x11common.$(OBJEXT) \
  	x11client.$(OBJEXT) x11server.$(OBJEXT) parse.$(OBJEXT) \
  	copyauth.$(OBJEXT) atoms.$(OBJEXT) translate.$(OBJEXT) \
@@ -12,8 +12,8 @@ Hook in tdestroy replacement.
 +	stringlist.$(OBJEXT) tdestroy.$(OBJEXT)
  xtrace_OBJECTS = $(am_xtrace_OBJECTS)
  xtrace_LDADD = $(LDADD)
- DEFAULT_INCLUDES = -I.@am__isrc@
-@@ -229,7 +229,7 @@ top_build_prefix = @top_build_prefix@
+ AM_V_P = $(am__v_P_@AM_V@)
+@@ -318,7 +318,7 @@ top_build_prefix = @top_build_prefix@
  top_builddir = @top_builddir@
  top_srcdir = @top_srcdir@
  AM_CPPFLAGS = -DPKGDATADIR='"$(pkgdatadir)"'
