--- a/x11/xtrace/Makefile
+++ b/x11/xtrace/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.2 2017/09/06 09:03:06 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/13 16:41:55 ktnb Exp $
 
-DISTNAME=	xtrace_1.3.1.orig
+DISTNAME=	xtrace_1.4.0.orig
 PKGNAME=	${DISTNAME:S/_/-/:S/.orig//}
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_DEBIAN:=pool/main/x/xtrace/}
+EXTRACT_SUFX=	.tar.xz
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://packages.qa.debian.org/x/xtrace.html
