--- a/x11/qterminal/Makefile
+++ b/x11/qterminal/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.39 2024/11/15 12:35:59 pin Exp $
+# $NetBSD: Makefile,v 1.40 2025/01/13 16:51:56 riastradh Exp $
 
 DISTNAME=	qterminal-2.1.0
+PKGREVISION=	1
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_GITHUB:=lxqt/}
 GITHUB_RELEASE=	${PKGVERSION_NOREV}
@@ -13,8 +14,6 @@ LICENSE=	gnu-gpl-v2
 
 USE_TOOLS+=	pkg-config perl
 USE_LANGUAGES=	c c++
-
-CMAKE_CONFIGURE_ARGS+=	-DCMAKE_PREFIX_PATH:PATH=${PREFIX}/qt6
 
 TOOL_DEPENDS+=	lxqt-build-tools>=2.1.0:../../devel/lxqt-build-tools
 TOOL_DEPENDS+=	qt6-qttools-[0-9]*:../../devel/qt6-qttools
