--- a/mail/mailutils/Makefile
+++ b/mail/mailutils/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.15 2024/11/14 22:20:37 wiz Exp $
+# $NetBSD: Makefile,v 1.16 2025/01/13 19:48:03 vins Exp $
 
-DISTNAME=	mailutils-3.17
-PKGREVISION=	6
+DISTNAME=	mailutils-3.18
 CATEGORIES=	mail
 MASTER_SITES=	${MASTER_SITE_GNU:=mailutils/}
 
