--- a/security/sudo/Makefile
+++ b/security/sudo/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.204 2024/09/18 10:07:35 kim Exp $
+# $NetBSD: Makefile,v 1.205 2025/01/13 19:56:51 vins Exp $
 
-DISTNAME=	sudo-1.9.16
-PKGREVISION=	1
+DISTNAME=	sudo-1.9.16p2
 CATEGORIES=	security
 MASTER_SITES=	https://www.sudo.ws/dist/
 MASTER_SITES+=	ftp://ftp.sudo.ws/pub/sudo/
