--- a/graphics/oculante/Makefile
+++ b/graphics/oculante/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.89 2024/12/27 08:20:01 wiz Exp $
+# $NetBSD: Makefile,v 1.90 2025/01/13 20:31:57 pin Exp $
 
-DISTNAME=	oculante-0.9.1
-PKGREVISION=	3
+DISTNAME=	oculante-0.9.2
 CATEGORIES=	graphics
 MASTER_SITES=	${MASTER_SITE_GITHUB:=woelper/}
 
@@ -16,9 +15,9 @@ TOOL_DEPENDS+=	cmake-[0-9]*:../../devel/cmake
 
 .include "cargo-depends.mk"
 
-#RUST_REQ=	1.80.1
+#RUST_REQ=	1.83.0
 #Upstream does not state the required MSRV.
-#This package is confirmed to build with Rust 1.80.1 on amd64
+#This package is confirmed to build with Rust 1.83.0 on amd64
 USE_LANGUAGES+=	c c++
 USE_TOOLS+=	pkg-config perl
 
