--- a/security/py-nvdlib/Makefile
+++ b/security/py-nvdlib/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.3 2024/11/11 07:28:55 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/14 06:43:18 adam Exp $
 
-DISTNAME=	nvdlib-0.7.7
+DISTNAME=	nvdlib-0.7.9
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	security python www
 MASTER_SITES=	${MASTER_SITE_GITHUB:=vehemont/}
