--- a/math/py-netCDF4/Makefile
+++ b/math/py-netCDF4/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.34 2024/11/14 22:20:42 wiz Exp $
+# $NetBSD: Makefile,v 1.35 2025/01/14 08:32:33 adam Exp $
 
-DISTNAME=	netcdf4-1.7.1.post1
+DISTNAME=	netcdf4-1.7.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/cdf/CDF/}
-PKGREVISION=	3
 CATEGORIES=	math python
 MASTER_SITES=	${MASTER_SITE_PYPI:=n/netCDF4/}
 
@@ -11,7 +10,7 @@ HOMEPAGE=	https://github.com/Unidata/netcdf4-python
 COMMENT=	Object-oriented python interface to netCDF version 4
 LICENSE=	mit
 
-WHEEL_NAME=	netCDF4-${PKGVERSION_NOREV}
+WHEEL_NAME=	${DISTNAME:S/cdf/CDF/}
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=61:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-certifi-[0-9]*:../../security/py-certifi
