--- a/devel/py-construct-classes/Makefile
+++ b/devel/py-construct-classes/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.2 2024/09/16 09:10:36 adam Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/14 09:28:44 wiz Exp $
 
 DISTNAME=	construct-classes-0.1.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
+PKGREVISION=	1
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=c/construct-classes/}
 
@@ -10,7 +11,7 @@ HOMEPAGE=	https://github.com/matejcik/construct-classes
 COMMENT=	Parse your binary structs into dataclasses
 LICENSE=	mit
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-poetry-core-[0-9]*:../../devel/py-poetry-core
+TOOL_DEPENDS+=	${PYPKGPREFIX}-poetry-core>=2.0.1:../../devel/py-poetry-core
 
 USE_LANGUAGES=	# none
 
