--- a/security/Makefile
+++ b/security/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.967 2025/01/11 18:22:51 wiz Exp $
+# $NetBSD: Makefile,v 1.968 2025/01/14 09:49:13 wiz Exp $
 #
 
 COMMENT=	Security and cryptography tools and libraries
@@ -324,6 +324,7 @@ SUBDIR+=	p5-Crypt-OpenSSL-Guess
 SUBDIR+=	p5-Crypt-OpenSSL-RSA
 SUBDIR+=	p5-Crypt-OpenSSL-Random
 SUBDIR+=	p5-Crypt-PBKDF2
+SUBDIR+=	p5-Crypt-PKCS10
 SUBDIR+=	p5-Crypt-PWSafe3
 SUBDIR+=	p5-Crypt-PasswdMD5
 SUBDIR+=	p5-Crypt-Primes
