--- a/devel/py-test-textual-snapshot/Makefile
+++ b/devel/py-test-textual-snapshot/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.2 2024/07/29 07:17:39 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/14 09:53:45 wiz Exp $
 
 DISTNAME=	pytest_textual_snapshot-1.0.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/py//:S/_/-/g}
+PKGREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pytest_textual_snapshot/}
 
@@ -10,7 +11,7 @@ HOMEPAGE=	https://pypi.org/project/pytest-textual-snapshot/
 COMMENT=	Snapshot testing for Textual apps
 LICENSE=	mit
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-poetry-core-[0-9]*:../../devel/py-poetry-core
+TOOL_DEPENDS+=	${PYPKGPREFIX}-poetry-core>=2.0.1:../../devel/py-poetry-core
 DEPENDS+=	${PYPKGPREFIX}-test>=7.0.0:../../devel/py-test
 DEPENDS+=	${PYPKGPREFIX}-jinja2>=3.0.0:../../textproc/py-jinja2
 DEPENDS+=	${PYPKGPREFIX}-rich>=12.0.0:../../comms/py-rich
