--- a/databases/py-pypika-tortoise/Makefile
+++ b/databases/py-pypika-tortoise/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.7 2024/12/03 15:33:24 adam Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/14 09:54:43 wiz Exp $
 
 DISTNAME=	pypika_tortoise-0.3.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
+PKGREVISION=	1
 CATEGORIES=	databases python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pypika-tortoise/}
 
@@ -10,7 +11,7 @@ HOMEPAGE=	https://github.com/tortoise/pypika-tortoise
 COMMENT=	Forked from pypika and streamline just for tortoise-orm
 LICENSE=	apache-2.0
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-poetry-core>=1.0.0:../../devel/py-poetry-core
+TOOL_DEPENDS+=	${PYPKGPREFIX}-poetry-core>=2.0.1:../../devel/py-poetry-core
 
 CONFLICTS=	py[0-9]*-pypika-[0-9]*
 
