--- a/audio/gst-plugins1-lv2/Makefile
+++ b/audio/gst-plugins1-lv2/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.23 2024/12/27 08:19:21 wiz Exp $
+# $NetBSD: Makefile,v 1.24 2025/01/14 10:16:19 adam Exp $
 
 PKGNAME=	${DISTNAME:S/plugins/plugins1/:S/-bad/-lv2/}
-PKGREVISION=	1
 CATEGORIES=	audio gnome
 
 COMMENT=	Open source multimedia framework - LV2 support plugin
