--- a/www/py-whitenoise/Makefile
+++ b/www/py-whitenoise/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2024/11/11 07:29:29 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/14 11:59:15 adam Exp $
 
-DISTNAME=	whitenoise-6.7.0
+DISTNAME=	whitenoise-6.8.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=w/whitenoise/}
