py-relatorio: updated to 0.11.1
0.11.1 - 2024-12-14

* Ignore ZipFile compresslevel for Python < 3.7

0.11.0 - 2024-12-07

* Allow setting zip file generation options on opendocument templates

--- a/textproc/py-relatorio/Makefile
+++ b/textproc/py-relatorio/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.28 2024/11/11 07:29:08 wiz Exp $
+# $NetBSD: Makefile,v 1.29 2025/01/14 16:52:18 adam Exp $
 
-DISTNAME=	relatorio-0.10.2
+DISTNAME=	relatorio-0.11.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=r/relatorio/}
@@ -16,8 +16,6 @@ DEPENDS+=	${PYPKGPREFIX}-lxml>=2.0:../../textproc/py-lxml
 TEST_DEPENDS+=	${PYPKGPREFIX}-magic-[0-9]*:../../sysutils/py-magic
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 post-install:
 	cd ${DESTDIR}${PREFIX}/bin && \
