json-glib: updated to 1.10.6
Overview of changes for 1.10

• Improve the performance and reliability of the JSON tokenizer
• Improve conformance of the JSON parser
• Add conformance test suite from https://github.com/nst/JSONTestSuite
• Add JsonParser:strict to enable strict parsing
• Add `--strict` to json-glib-validate to enable strict parsing
• Deprecate the signals on JsonParser
• Port tools man pages from DocBook to reStructureText
• Add "documentation" configuration option, and deprecate "gtk_doc"
• Add JsonGenerator.take_root()
• Documentation improvements for JsonReader
• Raise parser error for malformed Unicode
• Build fixes and performance improvements
• Allow disabling installed tests
• Support parsing multiple root statements in non-strict mode
• Allow loading files >4GB with json-glib-validate
• Allow single quoted strings when running in non-strict mode
• Allow escaped characters when running in non-strict mode
• Add missing nullable annotation

--- a/textproc/json-glib/Makefile
+++ b/textproc/json-glib/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.42 2024/07/22 20:43:00 adam Exp $
+# $NetBSD: Makefile,v 1.43 2025/01/14 21:39:41 adam Exp $
 
-DISTNAME=	json-glib-1.8.0
+DISTNAME=	json-glib-1.10.6
 CATEGORIES=	textproc gnome
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/${PKGBASE}/${PKGVERSION_NOREV:R}/}
 EXTRACT_SUFX=	.tar.xz
@@ -10,21 +10,30 @@ HOMEPAGE=	https://wiki.gnome.org/Projects/JsonGlib
 COMMENT=	JSON parser for GLib-based libraries and applications
 LICENSE=	gnu-lgpl-v2.1
 
-TOOL_DEPENDS+=	libxslt-[0-9]*:../../textproc/libxslt
 TOOL_DEPENDS+=	docbook-xsl-[0-9]*:../../textproc/docbook-xsl
+TOOL_DEPENDS+=	libxslt-[0-9]*:../../textproc/libxslt
+TOOL_DEPENDS+=	${PYPKGPREFIX}-docutils-[0-9]*:../../textproc/py-docutils
 
 USE_TOOLS+=	msgfmt pkg-config xgettext
 
+MESON_REQD+=	1.2.0
 MESON_ARGS+=	-Dman=true
 MESON_ARGS+=	-Dgtk_doc=disabled
 MESON_ARGS+=	-Dintrospection=enabled
 
-.include "../../mk/compiler.mk"
+SUBST_CLASSES+=		rst2man
+SUBST_MESSAGE.rst2man=	Fixing rst2man binary nameversioning.
+SUBST_STAGE.rst2man=	pre-configure
+SUBST_FILES.rst2man=	doc/meson.build
+SUBST_SED.rst2man+=	-e "s,'rst2man','rst2man-${PYVERSSUFFIX}',g"
+SUBST_SED.rst2man+=	-e "s,'rst2html5','rst2html5-${PYVERSSUFFIX}',g"
 
-.if !empty(PKGSRC_COMPILER:Mclang)
-_WRAP_EXTRA_ARGS.CC+=	-Wno-error=void-pointer-to-int-cast
-CWRAPPERS_APPEND.cc+=	-Wno-error=void-pointer-to-int-cast
-.endif
+#.include "../../mk/compiler.mk"
+
+#.if !empty(PKGSRC_COMPILER:Mclang)
+#_WRAP_EXTRA_ARGS.CC+=	-Wno-error=void-pointer-to-int-cast
+#CWRAPPERS_APPEND.cc+=	-Wno-error=void-pointer-to-int-cast
+#.endif
 
 # workaround for build failure
 # https://gitlab.gnome.org/GNOME/json-glib/issues/35
@@ -37,12 +46,12 @@ PRINT_PLIST_AWK+= \
 
 PYTHON_FOR_BUILD_ONLY=	tool
 
-BUILDLINK_API_DEPENDS.glib2+=	glib2>=2.38.0
 .include "../../converters/libiconv/buildlink3.mk"
 .include "../../devel/gettext-lib/buildlink3.mk"
+BUILDLINK_API_DEPENDS.glib2+=	glib2>=2.72.0
 .include "../../devel/glib2/buildlink3.mk"
-BUILDLINK_API_DEPENDS.gobject-introspection+=	gobject-introspection>=0.9.5
 BUILDLINK_DEPMETHOD.gobject-introspection+=	build
 .include "../../devel/gobject-introspection/buildlink3.mk"
 .include "../../devel/meson/build.mk"
+.include "../../lang/python/application.mk"
 .include "../../mk/bsd.pkg.mk"
