py-legacy-cgi: updated to 2.6.2
2.6.2

Remove the <4 Python requirement

--- a/www/py-legacy-cgi/Makefile
+++ b/www/py-legacy-cgi/Makefile
@@ -1,23 +1,23 @@
-# $NetBSD: Makefile,v 1.1 2024/11/01 00:07:59 wiz Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/15 07:59:03 adam Exp $
 
-DISTNAME=	legacy_cgi-2.6.1
+DISTNAME=	legacy_cgi-2.6.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
-CATEGORIES=	www
+CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=l/legacy_cgi/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://pypi.org/project/legacy_cgi/
-COMMENT=	Fork of the standard library cgi and cgitb modules, being deprecated in PEP-594
+HOMEPAGE=	https://github.com/jackrosenthal/legacy-cgi
+COMMENT=	Fork of the standard cgi and cgitb modules, deprecated in PEP-594
 LICENSE=	python-software-foundation
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-poetry-core-[0-9]*:../../devel/py-poetry-core
+TOOL_DEPENDS+=	${PYPKGPREFIX}-poetry-core>=1.0.0:../../devel/py-poetry-core
 
 USE_LANGUAGES=	# none
 
 REPLACE_PYTHON+=	cgi.py
 
 # substitute for 'cgi' in < 3.13
-PYTHON_VERSIONS_INCOMPATIBLE=	39 310 311 312
+PYTHON_VERSIONS_INCOMPATIBLE=	39
 
 .include "../../lang/python/application.mk"
 .include "../../lang/python/wheel.mk"
