polkit: updated to 126
polkit 126

Highlights:
- many code fixes detected either by CI or the author himself (Frantisek Sumsal)
- shellcheck and dependabot integration (Jan Macku)
- search for rules in /usr/local/share rather than /usr/local/lib (Luca Boccassi)
- Implement LogControl1 protocol for dynamic log level changes (Luca Boccassi)
- read actions also from /etc/, /run/ and /usr/local/share/ (Luca Boccassi)
- mozjs dropped in favor of duktape (Xi Ruoyao)
- many other fixes in build system and polkit code (Many thanks to all the authors.)

--- a/security/polkit/Makefile
+++ b/security/polkit/Makefile
@@ -1,27 +1,28 @@
-# $NetBSD: Makefile,v 1.54 2023/07/18 18:44:16 nia Exp $
+# $NetBSD: Makefile,v 1.55 2025/01/15 08:41:38 adam Exp $
 
-DISTNAME=	polkit-121
+DISTNAME=	polkit-126
 CATEGORIES=	security
-MASTER_SITES=	http://www.freedesktop.org/software/polkit/releases/
+MASTER_SITES=	${MASTER_SITE_GITHUB:=polkit-org/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://www.freedesktop.org/wiki/Software/polkit
 COMMENT=	Authorization Manager
 LICENSE=	gnu-lgpl-v2
 
-TOOL_DEPENDS+=		gettext-m4-[0-9]*:../../devel/gettext-m4
-TOOL_DEPENDS+=		gettext-tools-[0-9]*:../../devel/gettext-tools
-TOOL_DEPENDS+=		libxslt-[0-9]*:../../textproc/libxslt
-TOOL_DEPENDS+=		docbook-xsl-[0-9]*:../../textproc/docbook-xsl
+TOOL_DEPENDS+=	docbook-xsl-[0-9]*:../../textproc/docbook-xsl
+TOOL_DEPENDS+=	gettext-m4-[0-9]*:../../devel/gettext-m4
+TOOL_DEPENDS+=	gettext-tools-[0-9]*:../../devel/gettext-tools
+TOOL_DEPENDS+=	libxslt-[0-9]*:../../textproc/libxslt
 
 NOT_PAX_MPROTECT_SAFE=	lib/polkit-1/polkitd
 
-WRKSRC=			${WRKDIR}/polkit-v.${PKGVERSION_NOREV}
+USE_CXX_FEATURES=	c++17
 USE_LANGUAGES=		c c++
-USE_CXX_FEATURES+=	c++17
 USE_TOOLS+=		msgfmt msgmerge pkg-config perl xgettext
 
-MESON_ARGS+=		-Dman=true
+MESON_ARGS+=	-Dman=true
+MESON_ARGS+=	-Dpam_prefix=${PKG_SYSCONFDIR}/pam.d
+MESON_ARGS+=	-Dsession_tracking=ConsoleKit
 
 PKGCONFIG_OVERRIDE+=	data/polkit-gobject-1.pc.in
 PKGCONFIG_OVERRIDE+=	data/polkit-agent-1.pc.in
@@ -54,8 +55,8 @@ MAKE_DIRS+=		${PKG_SYSCONFDIR}/dbus-1/system.d
 SPECIAL_PERMS+=		lib/polkit-1/polkit-agent-helper-1 ${SETUID_ROOT_PERMS}
 SPECIAL_PERMS+=		bin/pkexec ${SETUID_ROOT_PERMS}
 
-CONF_FILES+=	${PREFIX}/share/examples/polkit/polkit-1/rules.d/50-default.rules \
-		${PKG_SYSCONFDIR}/polkit-1/rules.d/50-default.rules
+#CONF_FILES+=	${PREFIX}/share/examples/polkit/polkit-1/rules.d/50-default.rules \
+#		${PKG_SYSCONFDIR}/polkit-1/rules.d/50-default.rules
 
 .include "options.mk"
 
@@ -65,9 +66,9 @@ SUBST_FILES.paths+=	docs/man/pkexec.xml
 SUBST_FILES.paths+=	src/examples/org.freedesktop.policykit.examples.pkexec.policy.in
 SUBST_SED.paths+=	-e 's,/usr/bin/,${PREFIX}/bin/,g'
 
-post-install:
-	${MV} ${DESTDIR}${PKG_SYSCONFDIR}/polkit-1/rules.d/50-default.rules \
-		${DESTDIR}${PREFIX}/share/examples/polkit/polkit-1/rules.d/50-default.rules
+#post-install:
+#	${MV} ${DESTDIR}${PKG_SYSCONFDIR}/polkit-1/rules.d/50-default.rules \
+#		${DESTDIR}${PREFIX}/share/examples/polkit/polkit-1/rules.d/50-default.rules
 
 .include "../../devel/meson/build.mk"
 .include "../../lang/libduktape/buildlink3.mk"
