--- a/textproc/migemo/patches/patch-migemo.rb.in
+++ b/textproc/migemo/patches/patch-migemo.rb.in
@@ -1,8 +1,21 @@
-$NetBSD: patch-migemo.rb.in,v 1.1 2012/08/12 11:52:27 obache Exp $
+$NetBSD: patch-migemo.rb.in,v 1.2 2025/01/19 11:24:44 taca Exp $
+
+* Add specifying script encoding to EUC-JP.
+* Use modern regexp.
 
 --- migemo.rb.in.orig	2003-05-28 12:00:52.000000000 +0000
 +++ migemo.rb.in
-@@ -14,7 +14,6 @@
+@@ -1,3 +1,4 @@
++# coding: euc-jp
+ #
+ # Ruby/Migemo - a library for Japanese incremental search.
+ #
+@@ -10,11 +11,11 @@
+ #
+ # NOTE: Ruby/Migemo can work only with EUC_JP encoding. ($KCODE="e")
+ #
++Encoding.default_external = Encoding::EUC_JP
+ 
  require 'migemo-dict'
  require 'migemo-regex'
  require 'romkan'
@@ -10,7 +23,7 @@ $NetBSD: patch-migemo.rb.in,v 1.1 2012/08/12 11:52:27 obache Exp $
  include MigemoRegex
  
  class String
-@@ -24,7 +23,7 @@ class String
+@@ -24,7 +25,7 @@ class String
    end
  
    def quotemeta
