sysutils/fastfetch: python required as tool
Python is needed at build time for minifying the embedded help dialog,
for generating the man page, and for built-in pciids (the latter is
still disabled by default). As a consequence, include python as tool in
Makefile, and only pull it as full dependency if the 'python' option is
enabled.

Other changes:

* Do not install the LICENSE file.
* Explicitely enable pciaccess support.
* Standardise link method.
* Replace hard-coded paths.
* Install custom minimal config.

Revision bumped.

--- a/sysutils/fastfetch/Makefile
+++ b/sysutils/fastfetch/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2025/01/17 16:28:09 vins Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/19 11:59:51 vins Exp $
 
 DISTNAME=	fastfetch-2.34.1
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_GITHUB:=fastfetch-cli/}
 GITHUB_TAG=	${PKGVERSION_NOREV}
@@ -19,25 +19,40 @@ DEPENDS+=	hwdata-[0-9]*:../../misc/hwdata
 
 .include "../../mk/bsd.prefs.mk"
 
-SUBST_CLASSES+=		db
-SUBST_STAGE.db=		pre-configure
-SUBST_MESSAGE.db=	Setting pkgsrc database dir.
-SUBST_FILES.ds+=	src/detection/packages/packages_obsd.c
-SUBST_SED.db+=		-e "s:/usr/pkg/pkgdb:${PKG_DBDIR}:g"
+REPLACE_TOOL_PYTHON+=	scripts/gen-pciids.py scripts/gen-man.py
+
+SUBST_CLASSES+=		paths
+SUBST_STAGE.paths=	pre-configure
+SUBST_MESSAGE.paths=	Replacing hard-coded paths.
+SUBST_FILES.paths+=	src/detection/packages/packages_obsd.c
+SUBST_FILES.paths+=	doc/fastfetch.1.in scripts/gen-man.py
+SUBST_SED.paths+=	-e "s:/usr/pkg/pkgdb:${PKG_DBDIR}:g"
+SUBST_SED.paths+=	-e "s:/usr/share:${PREFIX}/share:g"
 
 CMAKE_CONFIGURE_ARGS+=	-DCMAKE_BUILD_TYPE=Release \
 			-DCMAKE_INSTALL_PREFIX='${PREFIX}' \
+			-DBINARY_LINK_TYPE=dlopen \
 			-DTARGET_DIR_USR='${PREFIX}' \
 			-DTARGET_DIR_ETC='${PKG_SYSCONFDIR}' \
 			-DCUSTOM_PCI_IDS_PATH=${PREFIX}/share/hwdata/pci.ids \
 			-DCUSTOM_AMDGPU_IDS_PATH=${BUILDLINK_PREFIX.libdrm}/share/libdrm/amdgpu.ids \
 			-DENABLE_SYSTEM_YYJSON=ON \
+			-DENABLE_PCIACCES=ON \
 			-DBUILD_FLASHFETCH=OFF \
-			-DBUILD_TESTS=ON
+			-DBUILD_TESTS=ON \
+			-DINSTALL_LICENSE=OFF
 
 .include "options.mk"
 
+post-install:
+	${INSTALL_DATA} ${FILESDIR}/minimal.jsonc	\
+		${DESTDIR}${PREFIX}/share/fastfetch/presets
 
+# Whether Python is required strictly as a build tool or also at runtime is
+# determined in options.mk, and PYTHON_FOR_BUILD_ONLY is set there, if needed.
+.include "../../lang/python/tool.mk"
+.include "../../lang/python/application.mk"
+PYTHON_VERSIONS_INCOMPATIBLE=   27
 
 .include "../../sysutils/libpciaccess/buildlink3.mk"
 .include "../../devel/yyjson/buildlink3.mk"
