libmikmod: updated to 3.3.12
libmikmod v3.3.12 was released on Dec. 31, 2024.

- Add WebAudio support (see webaudio/README.md for details.)
- Dynamically load pulseaudio library at runtime.
- New configuration option to exclude module depackers (off by default.)
- Fix high cpu usage in ALSA output driver (reported by David Lindsay.)
- Add WinMM driver (drv_win) command line options for buffer size and
  count
- Merge vibrato tables/math, fix tremolo ramp down, fix IT vibrato.
- Fix XM fine volume slide effects (was broken between libmikmod-3.1.6
  and 3.1.7)
- Changed XM effect L to behave correctly (e.g. Graff/ant attack.xm or
  villgust.xm)
- Implement MODPlugin ADPCM4 support
- Fix playback of Impulse Tracker modules with more than 99 instruments
  (e.g. many MPT-created ITs)
- Fix MOD retrigger (E9x) effect bug that would cause it to always
  retrigger on tick 1.
- Fix handling of FAR pattern break byte
- Add support for Mod's Grave WOW files to MOD loader
- Detect more MOD variants: TDZ#, FA04/6/8, LARD, NSMS
- Check M&K! and CD61 signatures in Octalyser modules
- Don't load STM samples with volume==0, fix sample offset calculation
- Fix volume event handling for FAR modules.
- Multiple fixes to FAR modules:
  * Fix player to handle empty patterns.
  * Handle invalid pattern numbers in position list.
  * Add support for effect 1 and 2 (porta slide up/down).
  * Implement effect 3 (tone porta) the right way.
  * Play with the real tempos.
  * Support for effects D and E (fine tempo up/down).
  * Fix effect 6 (vibrato).
  * Fix effect 4 (retrigger) by adding a new effect.
  * Fix bug in the sample loader when loading 16-bit samples.
  * Support for restart position.
- Fix GDM empty notes, fine volslide/portamento, and sample volume.
- Fix GDM set pan position effect.
- Fix MED 9xx command in tempo mode and various BPM mode bugs
- Implement missing OctaMED effects and fix several other MED effects
- Add support for MED song/instrument transpose and octave wrapping

--- a/audio/libmikmod/Makefile
+++ b/audio/libmikmod/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.76 2024/01/30 14:21:31 ryoon Exp $
+# $NetBSD: Makefile,v 1.77 2025/01/20 10:22:33 adam Exp $
 
-DISTNAME=	libmikmod-3.3.11.1
-PKGREVISION=	13
+DISTNAME=	libmikmod-3.3.12
 CATEGORIES=	audio
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=mikmod/}
 
@@ -10,14 +9,15 @@ HOMEPAGE=	http://mikmod.sourceforge.net/
 COMMENT=	MikMod Sound Library
 LICENSE=	gnu-lgpl-v2
 
-USE_LANGUAGES=		c99
+USE_CC_FEATURES=	c99
+USE_LANGUAGES=		c
 USE_LIBTOOL=		yes
 USE_TOOLS+=		gmake
 GNU_CONFIGURE=		yes
 CONFIGURE_ARGS+=	--disable-threads
-
 INFO_FILES=		yes
 PKGCONFIG_OVERRIDE=	libmikmod.pc.in
 
 .include "options.mk"
+
 .include "../../mk/bsd.pkg.mk"
