--- a/audio/shairport-sync/Makefile
+++ b/audio/shairport-sync/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.7 2024/01/30 14:21:34 ryoon Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/21 11:00:10 nia Exp $
 
 DISTNAME=	shairport-sync-3.3.9
 PKGREVISION=	6
 CATEGORIES=	audio
 MASTER_SITES=	${MASTER_SITE_GITHUB:=mikebrady/}
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/mikebrady/shairport-sync
 COMMENT=	AirPlay audio player with multi-room audio synchronisation capability
 LICENSE=	mit # possibly others?
