--- a/devel/lua-ansicolors/Makefile
+++ b/devel/lua-ansicolors/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2020/07/08 11:25:21 nia Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/21 11:00:10 nia Exp $
 
 DISTNAME=	ansicolors.lua-1.0.2
 PKGNAME=	${LUA_PKGPREFIX}-${DISTNAME:S/.lua//1}
@@ -7,7 +7,7 @@ MASTER_SITES=	${MASTER_SITE_GITHUB:=kikito/}
 GITHUB_PROJECT=	ansicolors.lua
 GITHUB_TAG=	v${PKGVERSION_NOREV}
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/kikito/ansicolors.lua
 COMMENT=	Simple Lua function for printing to the console in color
 LICENSE=	mit
