--- a/devel/lua-inspect/Makefile
+++ b/devel/lua-inspect/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2023/02/01 12:34:02 nia Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/21 11:00:11 nia Exp $
 
 DISTNAME=	lua-inspect-3.1.3
 PKGNAME=	${DISTNAME:S/lua/${LUA_PKGPREFIX}/}
@@ -7,7 +7,7 @@ MASTER_SITES=	${MASTER_SITE_GITHUB:=kikito/}
 GITHUB_PROJECT=	inspect.lua
 GITHUB_TAG=	v${PKGVERSION_NOREV}
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/kikito/inspect.lua
 COMMENT=	Human-readable representation of Lua tables
 LICENSE=	mit
