--- a/devel/lua-luv/Makefile
+++ b/devel/lua-luv/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2024/08/25 06:18:36 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/21 11:00:11 nia Exp $
 
 DISTNAME=	luv-1.43.0-0
 PKGNAME=	${LUA_PKGPREFIX}-${DISTNAME:S/-0$/.0/1}
@@ -8,7 +8,7 @@ MASTER_SITES=	${MASTER_SITE_GITHUB:=luvit/}
 GITHUB_PROJECT=	luv
 GITHUB_TAG=	${DISTNAME:S/^luv-//1}
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/luvit/luv
 COMMENT=	Bare libuv bindings for Lua
 LICENSE=	apache-2.0
