--- a/devel/lua-mimetypes/Makefile
+++ b/devel/lua-mimetypes/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2020/07/09 15:03:35 nia Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/21 11:00:11 nia Exp $
 
 DISTNAME=	lua-mimetypes-1.0.0
 PKGNAME=	${LUA_PKGPREFIX}-${DISTNAME:S/lua-//1}
@@ -6,7 +6,7 @@ PKGREVISION=	1
 CATEGORIES=	devel lua
 MASTER_SITES=	-https://bitbucket.org/leafstorm/lua-mimetypes/get/v${PKGVERSION_NOREV}.tar.gz
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://bitbucket.org/leafstorm/lua-mimetypes
 COMMENT=	MIME type database for Lua
 LICENSE=	mit
