--- a/devel/lua-sdl2/Makefile
+++ b/devel/lua-sdl2/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2024/08/25 06:18:36 wiz Exp $
+# $NetBSD: Makefile,v 1.17 2025/01/21 11:00:11 nia Exp $
 
 DISTNAME=	luasdl2-2.0.5.6.0
 PKGNAME=	${LUA_PKGPREFIX}-${DISTNAME:S/^lua//1}
@@ -8,7 +8,7 @@ MASTER_SITES=	${MASTER_SITE_GITHUB:=Tangent128/}
 GITHUB_PROJECT=	luasdl2
 GITHUB_TAG=	v2.0.5-6.0
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/Tangent128/luasdl2
 COMMENT=	Pure C binding of SDL 2.0 for Lua
 LICENSE=	isc
