--- a/devel/lua-system/Makefile
+++ b/devel/lua-system/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2020/07/08 12:15:08 nia Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/21 11:00:11 nia Exp $
 
 DISTNAME=	luasystem-0.2.1
 PKGNAME=	${LUA_PKGPREFIX}-${DISTNAME:S/^lua//1}
@@ -7,7 +7,7 @@ MASTER_SITES=	${MASTER_SITE_GITHUB:=o-lim/}
 GITHUB_PROJECT=	luasystem
 GITHUB_TAG=	v${PKGVERSION_NOREV}
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/o-lim/luasystem
 COMMENT=	Platform independent system call library for Lua
 LICENSE=	mit
