--- a/emulators/dosbox-x/Makefile
+++ b/emulators/dosbox-x/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.50 2024/04/06 08:05:16 wiz Exp $
+# $NetBSD: Makefile,v 1.51 2025/01/21 11:00:12 nia Exp $
 
 DISTNAME=	dosbox-x-0.84.3
 PKGREVISION=	6
@@ -6,7 +6,7 @@ CATEGORIES=	emulators
 MASTER_SITES=	${MASTER_SITE_GITHUB:=joncampbell123/}
 GITHUB_TAG=	dosbox-x-v${PKGVERSION_NOREV}
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://dosbox-x.com/
 COMMENT=	DOSBox fork with enhancements
 LICENSE=	gnu-gpl-v2
