--- a/emulators/libretro-beetle-psx/Makefile
+++ b/emulators/libretro-beetle-psx/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.10 2022/09/11 12:51:32 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/21 11:00:12 nia Exp $
 
 LIBRETRO_CORE=	mednafen_psx
 
 PKGREVISION= 1
 .include "Makefile.common"
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://docs.libretro.com/library/beetle_psx/
 COMMENT=	Libretro core based on the Mednafen PlayStation emulator
 
