--- a/emulators/libretro-flycast/Makefile
+++ b/emulators/libretro-flycast/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.17 2024/11/19 14:58:05 nia Exp $
+# $NetBSD: Makefile,v 1.18 2025/01/21 11:00:13 nia Exp $
 
 .include "../../emulators/flycast/Makefile.common"
 
 PKGNAME=	libretro-${DISTNAME}
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Libretro core based on the Flycast Sega Dreamcast emulator
 
 CMAKE_CONFIGURE_ARGS+=	-DLIBRETRO=ON
