--- a/emulators/mednaffe/Makefile
+++ b/emulators/mednaffe/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.19 2024/12/27 08:19:43 wiz Exp $
+# $NetBSD: Makefile,v 1.20 2025/01/21 11:00:13 nia Exp $
 
 DISTNAME=	mednaffe-0.9.2
 PKGREVISION=	11
@@ -6,7 +6,7 @@ CATEGORIES=	emulators
 MASTER_SITES=	${MASTER_SITE_GITHUB:=AmatCoder/}
 GITHUB_RELEASE=	${PKGVERSION_NOREV}
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/AmatCoder/mednaffe
 COMMENT=	Graphical interface for the Mednafen multi-system emulator
 LICENSE=	gnu-gpl-v3
