--- a/emulators/melonds/Makefile
+++ b/emulators/melonds/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.27 2024/12/27 08:19:43 wiz Exp $
+# $NetBSD: Makefile,v 1.28 2025/01/21 11:00:13 nia Exp $
 
 DISTNAME=	melonDS-0.8.3
 PKGNAME=	${DISTNAME:S/DS/ds/}
@@ -6,7 +6,7 @@ PKGREVISION=	21
 CATEGORIES=	emulators
 MASTER_SITES=	${MASTER_SITE_GITHUB:=Arisotura/}
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://melonds.kuribo64.net/
 COMMENT=	Nintendo DS emulator, sorta
 LICENSE=	gnu-gpl-v3
