--- a/emulators/retroarch/Makefile
+++ b/emulators/retroarch/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.75 2024/12/22 13:31:54 nia Exp $
+# $NetBSD: Makefile,v 1.76 2025/01/21 11:00:14 nia Exp $
 
 PKGREVISION= 29
 .include "version.mk"
@@ -18,7 +18,7 @@ SITES.retroarch.tar.gz= \
 SITES.retroarch-assets.tar.gz= \
 	-https://github.com/libretro/retroarch-assets/archive/ea38cbc592233095cbe9a1357932eac1ceb2a3cc.tar.gz
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://www.retroarch.com/
 COMMENT=	Official reference frontend for the libretro API
 LICENSE=	gnu-gpl-v3
