--- a/games/augustus/Makefile
+++ b/games/augustus/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.6 2024/08/11 17:41:55 nia Exp $
+# $NetBSD: Makefile,v 1.7 2025/01/21 11:00:14 nia Exp $
 
 DISTNAME=	augustus-4.0.0
 CATEGORIES=	games
 MASTER_SITES=	${MASTER_SITE_GITHUB:=Keriew/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/Keriew/augustus
 COMMENT=	Enhanced engine for the classic city building game Caesar III
 LICENSE=	gnu-agpl-v3
