--- a/games/ccleste/Makefile
+++ b/games/ccleste/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2025/01/06 21:49:10 ktnb Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/21 11:00:14 nia Exp $
 
 DISTNAME=	ccleste-1.4.0
 PKGREVISION=	1
@@ -6,7 +6,7 @@ CATEGORIES=	games
 MASTER_SITES=	${MASTER_SITE_GITHUB:=lemon32767/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/lemon32767/ccleste
 COMMENT=	Portable version of the Celeste Classic 2D platform game
 #LICENSE=	# freeware
