--- a/games/etlegacy/Makefile.common
+++ b/games/etlegacy/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.12 2024/11/17 09:48:20 nia Exp $
+# $NetBSD: Makefile.common,v 1.13 2025/01/21 11:00:15 nia Exp $
 # used by games/etlegacy/Makefile
 # used by games/etlegacy-server/Makefile
 
@@ -18,7 +18,7 @@ SITES.etlegacy.tar.gz= \
 SITES.etlegacy-libs.tar.gz= \
 	-https://github.com/etlegacy/etlegacy-libs/archive/${LIBS_TAG}.tar.gz
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://www.etlegacy.com/
 LICENSE=	gnu-gpl-v3
 
