--- a/games/julius/Makefile
+++ b/games/julius/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2024/04/06 08:05:27 wiz Exp $
+# $NetBSD: Makefile,v 1.5 2025/01/21 11:00:15 nia Exp $
 
 DISTNAME=	julius-1.7.0
 PKGREVISION=	3
@@ -6,7 +6,7 @@ CATEGORIES=	games
 MASTER_SITES=	${MASTER_SITE_GITHUB:=bvschaik/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/bvschaik/julius
 COMMENT=	Engine for the classic city building game Caesar III
 LICENSE=	gnu-agpl-v3
