--- a/games/sauerbraten/Makefile.common
+++ b/games/sauerbraten/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.1 2024/05/06 08:07:30 nia Exp $
+# $NetBSD: Makefile.common,v 1.2 2025/01/21 11:00:15 nia Exp $
 # used by games/sauerbraten/Makefile
 # used by games/sauerbraten-server/Makefile
 
@@ -8,7 +8,7 @@ CATEGORIES=	games
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=sauerbraten/}
 EXTRACT_SUFX=	.tar.bz2
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://sauerbraten.org/
 LICENSE=	zlib AND cc-by-nc-sa-v3.0-license
 
