--- a/graphics/drawing/Makefile
+++ b/graphics/drawing/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.11 2023/11/12 13:34:34 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2025/01/21 11:00:16 nia Exp $
 
 DISTNAME=	drawing-1.0.2
 CATEGORIES=	graphics gnome
 MASTER_SITES=	${MASTER_SITE_GITHUB:=maoschanz/}
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/maoschanz/drawing
 COMMENT=	Basic image editor, similar to Microsoft Paint
 LICENSE=	gnu-gpl-v3
