--- a/security/lua-argon2/Makefile
+++ b/security/lua-argon2/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2020/07/02 14:02:36 nia Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/21 11:00:17 nia Exp $
 
 DISTNAME=	lua-argon2-3.0.1
 PKGNAME=	${DISTNAME:S/lua-/${LUA_PKGPREFIX}-/1}
@@ -6,7 +6,7 @@ CATEGORIES=	security lua
 MASTER_SITES=	${MASTER_SITE_GITHUB:=thibaultcha/}
 GITHUB_PROJECT=	lua-argon2
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://thibaultcha.github.io/lua-argon2/
 COMMENT=	Lua C binding for the Argon2 password hashing algorithm
 LICENSE=	mit
