--- a/security/lua-bcrypt/Makefile
+++ b/security/lua-bcrypt/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2023/10/24 22:10:51 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2025/01/21 11:00:17 nia Exp $
 
 DISTNAME=	lua-bcrypt-2.2-1
 PKGNAME=	${DISTNAME:S/lua-/${LUA_PKGPREFIX}-/1:S/-1/.1/g}
@@ -8,7 +8,7 @@ MASTER_SITES=	${MASTER_SITE_GITHUB:=mikejsavage/}
 GITHUB_PROJECT=	lua-bcrypt
 GITHUB_TAG=	v2.2-1
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/mikejsavage/lua-bcrypt
 COMMENT=	Lua wrapper for the bcrypt password hashing function
 LICENSE=	isc
