--- a/time/lua-date/Makefile
+++ b/time/lua-date/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2022/02/19 20:47:21 nia Exp $
+# $NetBSD: Makefile,v 1.6 2025/01/21 11:00:17 nia Exp $
 
 DISTNAME=	lua-date-2.2
 PKGNAME=	${DISTNAME:S/lua-/${LUA_PKGPREFIX}-/1}
@@ -7,7 +7,7 @@ MASTER_SITES=	${MASTER_SITE_GITHUB:=Tieske/}
 GITHUB_PROJECT=	date
 GITHUB_TAG=	version_${PKGVERSION_NOREV}
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://tieske.github.io/date/
 COMMENT=	Date and Time module for Lua 5.x
 LICENSE=	mit
