--- a/www/lua-web-sanitize/Makefile
+++ b/www/lua-web-sanitize/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2023/02/01 12:36:06 nia Exp $
+# $NetBSD: Makefile,v 1.5 2025/01/21 11:00:18 nia Exp $
 
 DISTNAME=	web_sanitize-1.4.0
 PKGNAME=	${LUA_PKGPREFIX}-${DISTNAME:S/_/-/g}
@@ -7,7 +7,7 @@ MASTER_SITES=	${MASTER_SITE_GITHUB:=leafo/}
 GITHUB_PROJECT=	web_sanitize
 GITHUB_TAG=	v${PKGVERSION_NOREV}
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/leafo/web_sanitize
 COMMENT=	Lua library for sanitizing untrusted HTML
 LICENSE=	mit
