x11/lxqt-config: Sort buildlink3 includes.
No functional change intended.

--- a/x11/lxqt-config/Makefile
+++ b/x11/lxqt-config/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.43 2024/11/15 13:00:16 pin Exp $
+# $NetBSD: Makefile,v 1.44 2025/01/22 09:07:34 riastradh Exp $
 
 DISTNAME=	lxqt-config-2.1.0
 CATEGORIES=	x11
@@ -41,10 +41,11 @@ DEPENDS+=	lxqt-themes-[0-9]*:../../graphics/lxqt-themes
 TOOL_DEPENDS+=	lxqt-build-tools>=2.1.0:../../devel/lxqt-build-tools
 TOOL_DEPENDS+=	qt6-qttools-[0-9]*:../../devel/qt6-qttools
 
+.include "../../devel/cmake/build.mk"
+
+.include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../graphics/qt6-qtsvg/buildlink3.mk"
 .include "../../x11/libXcursor/buildlink3.mk"
-.include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../x11/liblxqt/buildlink3.mk"
 .include "../../x11/plasma6-libkscreen/buildlink3.mk"
-.include "../../devel/cmake/build.mk"
 .include "../../mk/bsd.pkg.mk"
