py-simpy: updated to 4.1.1
4.1.1 - 2023-11-12

- [FIX] ``EventCallback`` typing using ``TypeVar``
- [FIX] suppress some pyright typecheck issues involving ClassVars
- [CHANGE] some inner exceptions are now raise from None
- [CHANGE] ``Event.fail`` raises ``TypeError`` if it is not passed an ``Exception``
- [CHANGE] use ruff for code formatting and linting
- [CHANGE] add pyright typechecking to test suite
- [CHANGE] code refactoring for ruff conformance
- [DOCS] update examples to fix various lint issues


4.1.0 - 2023-11-05

- [BREAKING] Python 3.8 is the minimum supported version
- [BREAKING] Contemporary setuptools based packaging
- [NEW] Add ``Process.name`` property
- [FIX] Support Python 3.12
- [CHANGE] use PEP-563 postponed evaluation of annotations
- [CHANGE] remove __path__ munging for namespace package
- [DOCS] Fix machine shop example to avoid negative times
- [DOCS] Update to sphinx 7.2.6
- [DOCS] Remove sys.path hack in sphinx config
- [DOCS] Remove sphinx ``TYPE_CHECKING`` circular import hack
- [DOCS] Remove sphinx extensions circular import hack
- [DOCS] SimJulia renamed to ConcurrentSim.jl


4.0.2 - 2023-07-30

- [CHANGE] Tested with Python 3.9, 3.10, and 3.11
- [CHANGE] Improved docs w.r.t. triggered and processed events
- [CHANGE] Improved gas station example
- [FIX] ClassVar annotations in BaseResource
- [FIX] Documentation typos
- [FIX] Help static analyzers find exported symbols
- [FIX] ``license_file`` deprecation in setup.cfg
- [FIX] Do not re-annotate type of ``__path__``
- [FIX] Annotate ``ConditionValue.__init__()`` return value
- [FIX] Unbreak docs build by updating to Sphinx 6.2.1
- [FIX] Workaround Sphinx circular import problem


4.0.1 - 2020-04-15

- [FIX] Typing repair for Get and Put as ContextManagers


4.0.0 - 2020-04-06

- [BREAKING] Python 3.6 is the minimum supported version
- [BREAKING] ``BaseEnvironment`` is eliminated. Inherit ``Environment`` instead.
- [BREAKING] ``Environment.exit()`` is eliminated. Use ``return`` instead.


--- a/cad/py-simpy/Makefile
+++ b/cad/py-simpy/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.25 2022/01/04 20:52:36 wiz Exp $
+# $NetBSD: Makefile,v 1.26 2025/01/22 09:30:16 adam Exp $
 
-DISTNAME=	simpy-3.0.11
+DISTNAME=	simpy-4.1.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	cad math python
 MASTER_SITES=	${MASTER_SITE_PYPI:=s/simpy/}
 
@@ -11,5 +10,8 @@ HOMEPAGE=	https://simpy.readthedocs.io/
 COMMENT=	Discrete event simulation framework
 LICENSE=	mit
 
-.include "../../lang/python/egg.mk"
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=64:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=8.0:../../devel/py-setuptools
+
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
